force-app/main/default/objects/nFORCE__Content__mdt/nFORCE__Content__mdt.object-meta.xml
<CustomObject>
    <description>This object is reserved for future use.</description>
    <label>Content</label>
    <pluralLabel>Contents</pluralLabel>
</CustomObject>