force-app/main/default/objects/nFORCE__Content__mdt/fields/nFORCE__Feature_Name__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Feature_Name__c</fullName>
    <description>Temporary field used to associate the content with the feature</description>
    <label>-D Feature Name</label>
    <length>1</length>
    <type>Text</type>
</CustomField>