force-app/main/default/objects/nFORCE__Content__mdt/fields/nFORCE__Has_Resource__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Has_Resource__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to determine if this content record has resources. The additional resource should be a static resource that is named to match the pattern MetdataType_DeveloperName</description>
    <label>Has_Resource</label>
    <type>Checkbox</type>
</CustomField>